@@ -1,6 +1,7 @@
 2012 XXX XX  Sergey Satskiy <sergey.satskiy@gmail.com>
 
 * New feature: PythonTidy integration and diff viewers
+* New Project button is removed from the main window toolbar
 
 
 2012 XXX XX  Sergey Satskiy <sergey.satskiy@gmail.com>
